<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:text="@string/number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_height="match_parent"
            android:id="@+id/orderNumberText"
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:text="@string/hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_weight="0.74"
            android:textAlignment="viewEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/orderHourText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:layout_width="166dp"
            android:id="@+id/orderPlatesText"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_weight="0.75" />

        <TextView
            android:text="@string/total_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/totalPriceText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

</LinearLayout>
